# remove-comments

./: .gitignore  README.md  comment-remover  run_tests.py  setup.cfg  setup.py
comment_remover/: .gitignore  README.md  __init__.py  __main__.py  cli.py  core.py  run_tests.py
tests/: __init__.py  test_comment_remover.py
