[metadata]
name = comment-remover
version = 1.0.0
author = Shubham Sharma
author_email = shubhamsharma.emails@gmail.com
description = A tool to remove comments from code files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sharma-IT/comment-remover
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    comment-remover = comment_remover.cli:main
